testcases/phase1/check03stla-check3.rc
function : int main()
{
int x;
int y;
float a;
float b;
bool w;
bool u;
x = 0;
y = -4;
a = 5.2;
b = -3.1;
w = true;
u = false;

// pass
x = y;
a = b;
w = u;
a = x;
x = (-y);
a = (-b);
a = (-x);
x = (+y);
a = (+b);
a = (+x);

// error
  // type
x = a;
x = w;
a = w;
w = a;
w = x;

  // modifiable
2 = 4;
2 = y;
2 = w;

  // R-association
x = a = 1 = 3; // should report 1 = 3
w = y = a; // should report y = a


return 0;
}